# BD-lab1

./: CMakeLists.txt  README.md  main.c
entities/: Customer.c  Customer.h  CustomerMetaEntity.c  CustomerMetaEntity.h  IndexEntity.h  Review.c  Review.h  ReviewMetaEntity.c  ReviewMetaEntity.h
src/: CRUD.c  CRUD.h  FileUtility.c  FileUtility.h  MetaDB.c  MetaDB.h
